--- a/Faq.html
+++ b/Faq.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Billabong&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f5f5f5; /* উজ্জ্বল পটভূমি রঙ */
+            background-color: #f5f5f5; /* উজ্জ্বল পটভূমির রঙ */
             margin: 0;
             padding: 0;
             color: #333; /* টেক্সটের রঙ */
@@ -24,22 +24,22 @@
         }
         h1 {
             margin: 0;
-            font-size: 1.3em; /* ফন্ট সাইজ সামঞ্জস্য */
+            font-size: 1.3em; /* সামঞ্জস্য করা ফন্ট সাইজ */
             font-family: 'Billabong', cursive;
             color: #007BFF; /* নীল রঙ */
         }
         .logo-genz {
-            border: 1.5px solid #007BFF; /* নীল বর্ডার */
-            padding: 3px 6px; /* প্যাডিং কমানো */
+            border: 1.5px solid #007BFF; /* নীল সীমানা */
+            padding: 3px 6px; /* পেডিং কমানো */
             display: inline-block;
             border-radius: 10px;
             white-space: nowrap;
         }
         .faq-button {
             color: #007BFF; /* নীল রঙ */
-            font-size: 0.9em; /* ফন্ট সাইজ কমানো */
-            padding: 3px 6px; /* প্যাডিং কমানো */
-            border: 1px solid #007BFF; /* নীল বর্ডার */
+            font-size: 0.9em; /* কমানো ফন্ট সাইজ */
+            padding: 3px 6px; /* পেডিং কমানো */
+            border: 1px solid #007BFF; /* নীল সীমানা */
             border-radius: 5px;
             margin-left: 5px;
             cursor: pointer;
@@ -49,9 +49,9 @@
         }
         .divider {
             height: 1px;
-            background-color: #007BFF; /* নীল বর্ডার */
+            background-color: #007BFF; /* নীল সীমানা */
             width: 100%;
-            margin-top: 0; /* উপরের মার্জিন বাদ দিন */
+            margin-top: 0; /* উপরের মার্জিন সরান */
         }
         .divider-text {
             text-align: center;
@@ -60,11 +60,11 @@
             margin: 10px 0; 
         }
         .faq-content {
-            padding: 10px 20px; /* উপরের প্যাডিং কমানো */
+            padding: 10px 20px; /* উপরের পেডিং কমানো */
             font-size: 0.85em;
         }
         .faq-content h2 {
-            font-size: 1.2em; /* FAQ শিরোনামের জন্য সাইজ কমানো */
+            font-size: 1.2em; /* FAQ শিরোনামের জন্য কমানো সাইজ */
         }
         footer {
             text-align: center;
@@ -81,74 +81,74 @@
         <h1 class="logo-genz" translate="no">GZ</h1>
     </a>
     <div style="display: flex; align-items: center;">
-        <div class="faq-button">FAQ</div>
+        <div class="faq-button">সাধারণ জিজ্ঞাস্য</div>
     </div>
 </header>
 
 <div class="divider"></div>
-<div class="divider-text">FAQ - প্রায়শই জিজ্ঞাসা করা প্রশ্ন</div>
+<div class="divider-text">সাধারণ জিজ্ঞাস্য - FAQ</div>
 <div class="divider"></div>
 
 <div class="faq-content">
-    <h2>১. GZ কী এবং এটি কী কাজে লাগে?</h2>
-    <p>G-Z একটি সম্পূর্ণ বিনামূল্যে ওয়েব অ্যাপ্লিকেশন যা ব্যবহারকারীদের তাদের জন্ম তারিখ, জন্মস্থান এবং লিঙ্গ জমা দিতে দেয়, কোনও নিবন্ধন ছাড়াই। এটি জন্মের উপর বৈশ্বিক এবং জাতীয় পরিসংখ্যান তৈরি করতে ডিজাইন করা হয়েছে, যার মধ্যে অন্তর্ভুক্ত:</p>
+    <h2>1. GZ কি এবং এটি কীভাবে ব্যবহার করবেন?</h2>
+    <p>G-Z হল একটি সম্পূর্ণ বিনামূল্যে ওয়েব অ্যাপ্লিকেশন যা ব্যবহারকারীদের তাদের জন্ম তারিখ, জন্মস্থান এবং লিঙ্গ প্রবেশ করতে দেয় কোনও প্রাক-নিবন্ধনের প্রয়োজন ছাড়াই। এটি জন্মের উপর বৈশ্বিক এবং জাতীয় পরিসংখ্যান তৈরি করার জন্য ডিজাইন করা হয়েছে, যার মধ্যে অন্তর্ভুক্ত:</p>
     <ul>
-        <li>প্রতিদিন, মাসে এবং বছরে জন্মের সংখ্যা।</li>
-        <li>দেশ, লিঙ্গ এবং বয়স অনুযায়ী বন্টন।</li>
+        <li>দিন, মাস এবং বছরের ভিত্তিতে জন্মের সংখ্যা।</li>
+        <li>দেশ, লিঙ্গ এবং বয়স অনুসারে বিতরণ।</li>
     </ul>
-    <p>প্রধান লক্ষ্য হল জনসংখ্যার বৈশ্বিক প্রবণতাগুলি বোঝার জন্য প্রবেশযোগ্য ডেটা প্রদান করা।</p>
+    <p>প্রধান লক্ষ্য হল বৈশ্বিক জনসংখ্যার প্রবণতা বোঝার জন্য অ্যাক্সেসযোগ্য জনসংখ্যার তথ্য প্রদান করা।</p>
 
-    <h2>২. কি আমার তথ্য অজ্ঞাত?</h2>
-    <p>হ্যাঁ, আপনার তথ্য সম্পূর্ণরূপে অজ্ঞাত। আমরা G-Z ডিজাইন করেছি যাতে:</p>
+    <h2>2. আমার তথ্য কি অ্যানোনিমাস?</h2>
+    <p>হ্যাঁ, আপনার তথ্য সম্পূর্ণরূপে অ্যানোনিমাস। আমরা G-Z ডিজাইন করেছি যাতে:</p>
     <ul>
-        <li>কোন তথ্য একটি একক ব্যবহারকারীকে চিহ্নিত করা যায় না।</li>
-        <li>আমরা কোন তথ্য সংগ্রহ করি না যা চিহ্নিত করে কে কী জমা দিয়েছে। আপনি নিশ্চিত থাকতে পারেন, আপনার পরিচয় সুরক্ষিত এবং আপনার তথ্য অবিলম্বে একত্রিত করা হয়।</li>
+        <li>কোনও তথ্য একটি একক ব্যবহারকারীর কাছে ট্রেস করা যাবে না।</li>
+        <li>আমরা এমন তথ্য সংগ্রহ করি না যা চিহ্নিত করতে পারে কে কি পাঠিয়েছে। নিশ্চিন্ত থাকুন, আপনার পরিচয় সুরক্ষিত এবং আপনার তথ্য অবিলম্বে সংকলিত হয়।</li>
     </ul>
 
-    <h2>৩. আমি কীভাবে জানতে পারব যে আমার তথ্য জমা হয়েছে?</h2>
-    <p>আপনার তথ্য জমা দেওয়ার পরে:</p>
+    <h2>3. আমি কিভাবে জানব যে আমার তথ্য পাঠানো হয়েছে?</h2>
+    <p>যখন আপনার তথ্য পাঠানো হয়েছে:</p>
     <ul>
-        <li>জমা দেওয়ার বোতামটির রঙ পরিবর্তন হবে: জমা দেওয়ার সময় কমলা এবং সফল জমা দেওয়ার পর সবুজ।</li>
-        <li>বোতামের পাঠ্য "জমা দিন" থেকে "জমা দেওয়া হয়েছে" পরিবর্তন হবে।</li>
+        <li>পাঠানোর বোতামটি রঙ পরিবর্তন করবে: পাঠানোর সময় কমলা এবং সফলভাবে পাঠানোর পরে সবুজ।</li>
+        <li>বোতামের টেক্সট "পাঠান" থেকে "পাঠানো হয়েছে" এ পরিবর্তন হবে।</li>
     </ul>
     <p>এই সূচকগুলি নিশ্চিত করে যে আপনার তথ্য বিবেচনায় নেওয়া হয়েছে।</p>
 
-    <h2>৪. আমি কী আমার জমা দেওয়া তথ্য পরিবর্তন বা মুছে ফেলতে পারি?</h2>
-    <p>হ্যাঁ, আপনি জমা দেওয়ার পরে আপনার তথ্য মুছে ফেলার সুযোগ পাবেন। এখানে কীভাবে:</p>
+    <h2>4. আমি কি আমার পাঠানো তথ্য পরিবর্তন বা মুছে ফেলতে পারি?</h2>
+    <p>হ্যাঁ, আপনার পাঠানোর পরে আপনার তথ্য মুছে ফেলার একটি বিকল্প রয়েছে। এটি কিভাবে করবেন:</p>
     <ul>
-        <li>জমা দেওয়ার পরে একটি রিসেট আইকন প্রদর্শিত হবে।</li>
-        <li>এই আইকনে ক্লিক করে, আপনার তথ্য সম্পূর্ণরূপে আমাদের সার্ভার থেকে মুছে ফেলা হবে।</li>
+        <li>পাঠানোর পরে একটি রিসেট আইকন প্রদর্শিত হবে।</li>
+        <li>এই আইকনে ক্লিক করে, আপনার তথ্য আমাদের সার্ভার থেকে সম্পূর্ণরূপে মুছে ফেলা হবে।</li>
     </ul>
-    <p>যাইহোক, একবার আপনি ওয়েব অ্যাপ্লিকেশনটি বন্ধ করলে বা সেশনটি শেষ হলে, তথ্য অপরিবর্তনীয়ভাবে অজ্ঞাত হয়ে যায় এবং আর পরিবর্তন বা মুছে ফেলা সম্ভব নয়। আরও তথ্যের জন্য আমাদের <a href="Confidentialité.html">গোপনীয়তার নীতি '৫'</a> পর্যালোচনা করুন।</p>
+    <p>যাহোক, একবার আপনি ওয়েব অ্যাপ্লিকেশনটি বন্ধ করলে বা সেশন শেষ হলে, তথ্যগুলি অপরিবর্তনীয়ভাবে অ্যানোনিমাইজড হয়ে যাবে এবং সেগুলি পরিবর্তন বা মুছে ফেলা সম্ভব হবে না। আরও তথ্যের জন্য আমাদের <a href="Confidentialité.html">গোপনীয়তা নীতি '5'</a> দেখুন।</p>
 
-    <h2>৫. যদি আমি ভুল তথ্য প্রদান করি তবে কী হবে?</h2>
-    <p>আমরা আপনাকে সঠিক এবং যাচাইকৃত তথ্য জমা দিতে উৎসাহিত করি যাতে পরিসংখ্যানের গুণমান নিশ্চিত হয়। যদি আপনি জমা দেওয়ার পরে একটি ত্রুটি দেখতে পান:</p>
+    <h2>5. যদি আমি ভুল তথ্য দিই, তবে কি হবে?</h2>
+    <p>আমরা আপনাকে সঠিক এবং যাচাই করা তথ্য প্রদান করতে উত্সাহিত করি যাতে পরিসংখ্যানের গুণমান নিশ্চিত হয়। যদি আপনি পাঠানোর পরে একটি ত্রুটি লক্ষ্য করেন:</p>
     <ul>
-        <li>আপনার তথ্য মুছে ফেলার জন্য রিসেট আইকন ব্যবহার করুন।</li>
-        <li>তারপর আপনি সংশোধিত তথ্য জমা দিতে পারেন।</li>
+        <li>আপনার তথ্য মুছে ফেলার জন্য রিসেট আইকনটি ব্যবহার করুন।</li>
+        <li>তারপর আপনি সঠিক তথ্য পাঠাতে পারেন।</li>
     </ul>
 
-    <h2>৬. GZ কে সমর্থন করার কারণ কী?</h2>
-    <p>যদিও GZ বিনামূল্যে, আমাদের আপনার সমর্থন প্রয়োজন:</p>
+    <h2>6. কেন আমাকে GZ সমর্থন করতে হবে?</h2>
+    <p>আমাদের লক্ষ্য হল G-Z কে একটি মোবাইল অ্যাপ্লিকেশনে রূপান্তরিত করা যেখানে ব্যবহারকারীদের নিবন্ধন করার সুপারিশ করা হবে। এটি আমাদের আরও সমৃদ্ধ পরিসংখ্যান তথ্য প্রদান করতে সক্ষম করবে, যার মধ্যে অন্তর্ভুক্ত:</p>
     <ul>
-        <li>সার্ভার এবং অবকাঠামোর খরচ কভার করতে।</li>
-        <li>গভীর বিশ্লেষণ এবং ভবিষ্যতের প্রকল্পগুলি অর্থায়ন করতে যা সবার উপকারে আসবে।</li>
-        <li>অ্যাপ্লিকেশন এবং এর বৈশিষ্ট্যগুলির ক্রমাগত উন্নতি করতে।</li>
+        <li>জীবনের চ্যালেঞ্জগুলি নিয়ে একটি গবেষণা, অভ্যন্তরীণ এবং বাহ্যিক উভয়ই।</li>
+        <li>নির্দিষ্ট স্থানে মৃত্যুর কারণ সম্পর্কে তথ্য।</li>
+        <li>অন্যান্য অনেক উপকারী পরিসংখ্যান!</li>
     </ul>
-    <p>আপনি PayPal বা অন্যান্য অবদান মাধ্যমের মাধ্যমে আমাদের মিশনকে সমর্থন করতে পারেন।</p>
+    <p>আমাদের জরিপগুলিতে অংশগ্রহণ করে, আপনি এমন তথ্য সংগ্রহে সহায়তা করবেন যা বর্তমান সামাজিক চ্যালেঞ্জগুলির সমাধান চিহ্নিত করতে সহায়তা করতে পারে। দয়া করে মনে রাখবেন যে কিছু অবদান বিকাশকারীর প্রচেষ্টাকে পুরস্কৃত করার জন্যও ব্যবহৃত হতে পারে।</p>
 
-    <h2>৭. GZ কে সোশ্যাল মিডিয়ায় অনুসরণ করার কারণ কী?</h2>
-    <p>সোশ্যাল মিডিয়ায় আমাদের অনুসরণ করে, আপনি:</p>
+    <h2>7. কেন আমাকে সোশ্যাল মিডিয়াতে GZ অনুসরণ করতে হবে?</h2>
+    <p>আমাদের সোশ্যাল মিডিয়াতে অনুসরণ করে, আপনি:</p>
     <ul>
-        <li>নতুন বিশ্লেষণ এবং জনসংখ্যার প্রবণতা সম্পর্কে জানাতে পারবেন।</li>
-        <li>আমাদের বৈশ্বিক পরিসংখ্যানের উপর নিয়মিত আপডেট আবিষ্কার করতে পারবেন।</li>
-        <li>বিশ্বব্যাপী জনসংখ্যার ডেটা নিয়ে শিক্ষামূলক আলোচনা অংশগ্রহণ করতে পারবেন।</li>
+        <li>নতুন বিশ্লেষণ এবং জনসংখ্যার প্রবণতা সম্পর্কে জানবেন।</li>
+        <li>আমাদের বৈশ্বিক পরিসংখ্যান সম্পর্কে নিয়মিত আপডেট আবিষ্কার করবেন।</li>
+        <li>বিশ্বব্যাপী জনসংখ্যার সমস্যাগুলি নিয়ে শিক্ষামূলক আলোচনায় যোগদান করবেন।</li>
     </ul>
-    <p>এছাড়াও, আমরা আমাদের পরিসংখ্যান থেকে উদ্ভূত মজার তথ্য শেয়ার করি, এবং আমাদের নতুন প্রকল্পগুলির সম্পর্কে আপনাকে জানিয়ে রাখি।</p>
+    <p>এছাড়াও, আমরা আমাদের পরিসংখ্যানের ভিত্তিতে আকর্ষণীয় তথ্য শেয়ার করি এবং আপনাকে আমাদের নতুন প্রকল্পগুলোর সম্পর্কে অবহিত রাখি।</p>
 </div>
 
 <footer>
-    <p>©️ ২০২৫ GZ</p>
+    <p>©️ 2025 GZ</p>
 </footer>
 </body>
 </html>
